--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <!-- This line provides automatic page and style reloading when files change -->
   <!-- <script type="module" src="/lib/client/updater.js"></script> -->
 
-  <script type="module" src="/js/index.js"></script>
+  <script type="module" src="js/index.js"></script>
 
 </head>
 
