--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
         <div><img src="images/bunny.png" id="bunnyImg"></div>
         <div><img src="images/no.png" id="outfitImg"></div>
         <div><img src="images/no.png" id="extraImg"></div>
+        <canvas class="result" id="canvas"></canvas>
       </div>
 
       <div id="saveContainer">
