--- a/public/index.html
+++ b/public/index.html
@@ -49,26 +49,25 @@
       <div id="outfit" class="tabcontent">
         <div class="myGallery" id="clothesGallery">
           <button><img src="images/no.svg" alt="option: nothing" class="cBttn" id="cNone" /></button>
-          <button><img src="images/clothes/o0.png" alt="clothes option 0" class="cBttn" id="c0" /></button>
-          <button><img src="images/clothes/o1.png" alt="clothes option 1" class="cBttn" id="c1" /></button>
-          <button><img src="images/clothes/o2.png" alt="clothes option 2" class="cBttn" id="c2" /></button>
-          <button><img src="images/clothes/o3.png" alt="clothes option 3" class="cBttn" id="c3" /></button>
-          <button><img src="images/clothes/o4.png" alt="clothes option 4" class="cBttn" id="c4" /></button>
-          <button><img src="images/clothes/o5.png" alt="clothes option 5" class="cBttn" id="c5" /></button>
+          <button><img src="images/clothesIcon/o0.png" alt="clothes option 0" class="cBttn" id="c0" /></button>
+          <button><img src="images/clothesIcon/o1.png" alt="clothes option 1" class="cBttn" id="c1" /></button>
+          <button><img src="images/clothesIcon/o2.png" alt="clothes option 2" class="cBttn" id="c2" /></button>
+          <button><img src="images/clothesIcon/o3.png" alt="clothes option 3" class="cBttn" id="c3" /></button>
+          <button><img src="images/clothesIcon/o4.png" alt="clothes option 4" class="cBttn" id="c4" /></button>
+          <button><img src="images/clothesIcon/o5.png" alt="clothes option 5" class="cBttn" id="c5" /></button>
         </div>
       </div>
 
       <div id="acc" class="tabcontent">
         <div class="myGallery">
           <button><img src="images/no.svg" alt="option: nothing" class="eBttn" id="eNone" /></button>
-          <button><img src="images/extra/a0.png" alt="accessory option 0" class="eBttn" id="e0" /></button>
-          <button><img src="images/extra/a1.png" alt="accessory option 1" class="eBttn" id="e1" /></button>
-          <button><img src="images/extra/a2.png" alt="accessory option 2" class="eBttn" id="e2" /></button>
-          <button><img src="images/extra/a3.png" alt="accessory option 3" class="eBttn" id="e3" /></button>
-          <button><img src="images/extra/a4.png" alt="accessory option 4" class="eBttn" id="e4" /></button>
-          <button><img src="images/extra/a5.png" alt="accessory option 5" class="eBttn" id="e5" /></button>
-          <button><img src="images/extra/a6.png" alt="accessory option 6" class="eBttn" id="e6" /></button>
-
+          <button><img src="images/extraIcon/a0.png" alt="accessory option 0" class="eBttn" id="e0" /></button>
+          <button><img src="images/extraIcon/a1.png" alt="accessory option 1" class="eBttn" id="e1" /></button>
+          <button><img src="images/extraIcon/a2.png" alt="accessory option 2" class="eBttn" id="e2" /></button>
+          <button><img src="images/extraIcon/a3.png" alt="accessory option 3" class="eBttn" id="e3" /></button>
+          <button><img src="images/extraIcon/a4.png" alt="accessory option 4" class="eBttn" id="e4" /></button>
+          <button><img src="images/extraIcon/a5.png" alt="accessory option 5" class="eBttn" id="e5" /></button>
+          <!-- <button><img src="images/extraIcon/a6.png" alt="accessory option 6" class="eBttn" id="e6" /></button> -->
         </div>
       </div>
     </div>
