--- a/public/index.html
+++ b/public/index.html
@@ -88,17 +88,18 @@
       <div id="saveContainer">
         <div id="notLoggedInDiv">
           <h3>Sign in to save your outfits!</h3>
-
           <form id="loginForm">
             <div id="signin"></div>
           </form>
         </div>
+
         <div id="loggedInDiv">
-          <button class="saveBunnyBttn" id="saveBunnyBttn0">save outfit</button>
-          <button class="saveBunnyBttn" id="saveBunnyBttn1">save outfit</button>
-          <button class="saveBunnyBttn" id="saveBunnyBttn2">save outfit</button>
+          <div><button class="deleteBunnyBttn" id="deleteBunnyBttn0">X</button><button class="saveBunnyBttn" id="saveBunnyBttn0">save outfit</button></div>
+          <div><button class="deleteBunnyBttn" id="deleteBunnyBttn1">X</button><button class="saveBunnyBttn" id="saveBunnyBttn1">save outfit</button></div>
+          <div><button class="deleteBunnyBttn" id="deleteBunnyBttn2">X</button><button class="saveBunnyBttn" id="saveBunnyBttn2">save outfit</button></div>
         </div>
-        <button class="downloadBttn" style="width:100%">Download</button>
+
+        <button id="downloadBttn">Download</button>
       </div>
     </div>
 
