--- a/public/index.html
+++ b/public/index.html
@@ -78,10 +78,10 @@
         <div id="bunnyContainer1">
           <img src="images/no.png" alt="">
         </div>
-        <div><img src="images/no.png" id="bgImg"></div>
-        <div><img src="images/bunny.png" id="bunnyImg"></div>
-        <div><img src="images/no.png" id="outfitImg"></div>
-        <div><img src="images/no.png" id="extraImg"></div>
+        <img src="images/no.png" id="bgImg">
+        <img src="images/bunny.png" id="bunnyImg">
+        <img src="images/no.png" id="outfitImg">
+        <img src="images/no.png" id="extraImg">
         <canvas class="result" id="canvas"></canvas>
       </div>
 
