hide google sign in

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
       </div>
 
       <div id="saveContainer">
-        <div id="notLoggedInDiv">
+        <!-- <div id="notLoggedInDiv">
           <h3>Sign in to save your outfits!</h3>
           <form id="loginForm">
             <div id="signin"></div>
@@ -95,7 +95,7 @@
           <div><button class="deleteBunnyBttn" id="deleteBunnyBttn0">X</button><button class="saveBunnyBttn" id="saveBunnyBttn0">save outfit</button></div>
           <div><button class="deleteBunnyBttn" id="deleteBunnyBttn1">X</button><button class="saveBunnyBttn" id="saveBunnyBttn1">save outfit</button></div>
           <div><button class="deleteBunnyBttn" id="deleteBunnyBttn2">X</button><button class="saveBunnyBttn" id="saveBunnyBttn2">save outfit</button></div>
-        </div>
+        </div> -->
 
         <button id="downloadBttn">Download</button>
       </div>
