--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@
 
       <div id="saveContainer">
         <div id="notLoggedInDiv">
+          <!-- google log in -->
           <h3>Sign in to save your outfits!</h3>
           <form id="loginForm">
             <div id="signin"></div>
